# HDF5_external_build_example

src/: CMakeLists.txt
src/TestProg/: CMakeLists.txt  TestCase.f90
